@@ -41,6 +41,8 @@ public:
     void disable_sound() const;
     void enable_sound();
 
+    void update_volumes();
+
     void play_sfx_from_file(std::string filename, int repeat_n);
     void play_sfx_from_chunk(Mix_Chunk* chunk, int repeat_n);
     Mix_Chunk *sfx_from_file(std::string filename);
